[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "task-scheduler"
version = "0.1.0"
description = "A simple cron-style task scheduler with a CLI"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.10",
    "click>=8.1",
    "tabulate>=0.9",
]

[project.scripts]
taskctl = "scheduler.cli:cli"
